# fscrawler

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: db.rs  main.rs  routes.rs
api/static/: index.html  mydisk.html
fscrawler/: Cargo.toml
fscrawler/sql/: 01_roles_database.sql
fscrawler/src/: cli.rs  config.rs  crawler.rs  db.rs  main.rs  types.rs
fscrawler/src/writers/: postgres.rs  table.rs
sql/: 02_schema_permissions.sql  cleanup.sql
src/: bckup_original_code  cli.rs  config.rs  crawler.rs  db.rs  lib.rs  main.rs  types.rs  worker.rs  writers.rs
src/writers/: postgres.rs  stdout.rs  table.rs
