[package]
name = "fscrawler"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4",  features = ["derive"] }

# Concurrency primitives - work stealing deque and channels
crossbeam = { version = "0.8", features = [
    "crossbeam-deque",    # work-stealing queues (Injector, Worker, Stealer)
    "crossbeam-channel",  # better channels than std::sync::mpsc
] }

# Database
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "chrono",
    "macros",
] }

# Async runtime (writer thread only)
tokio = { version = "1", features = ["rt"] }

# Low-level syscall access
rustix = { version = "1", features = [
    "fs",    # statx(), openat(), getdents()
] }

# Concurrent hashmap for inode deduplication (better than Mutex<HashSet>)
dashmap = "6"

# Timestamp handling (maps to sqlx chrono feature)
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.11.1"
